--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,17 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-context</artifactId>-->
+<!--            <version>4.0.6.RELEASE</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.0.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
